Fixed topnav spacing and added mobile styling

--- a/client/src/components/styles/main.css
+++ b/client/src/components/styles/main.css
@@ -89,11 +89,11 @@ tbody {
     /* display:inline-block; */
 }
 
-/* @media only screen and (max-width: 480px) {
-   .boxRanking {
+@media only screen and (max-width: 900px) {
+   .boxAnnContainer {
      display: none !important;
    }
-} */
+}
 
 .boxAnn {
     background-color: #F1F1F1;
